--- a/CoreBlog/Views/Comment/CommentListByBlog.cshtml
+++ b/CoreBlog/Views/Comment/CommentListByBlog.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="comment-top">
+﻿@model IEnumerable<EntityLayer.Concrete.Comment>
+
+<div class="comment-top">
     <h4>Yorumlar</h4>
     <div class="media">
         <img src="~/CoreBlogTema/web/images/t1.jpg" alt="" class="img-fluid" />
