--- a/CoreBlog/Views/Blog/BlogReadAll.cshtml
+++ b/CoreBlog/Views/Blog/BlogReadAll.cshtml
@@ -58,7 +58,9 @@
                         </div>
                     }
 
-                    @await Component.InvokeAsync("CommentList")
+                    @*@await Component.InvokeAsync("CommentList")*@
+
+                    @await Component.InvokeAsync("CommentListByBlog")
 
                     @*@await Html.PartialAsync("~/Views/Comment/CommentListByBlog.cshtml")*@
 
