--- a/CoreBlog/Views/Shared/Components/CommentListByBlog/Default.cshtml
+++ b/CoreBlog/Views/Shared/Components/CommentListByBlog/Default.cshtml
@@ -1,17 +1,24 @@
 ﻿@model IEnumerable<EntityLayer.Concrete.Comment>
 
-<div class="comment-top">
-    <h4>Yorumlar</h4>
-    @foreach (var item in Model)
+<div class="comment-top">  
+    @if (Model.Count() > 0)
     {
-        <div class="media">
-            <img src="~/web/images/t1.jpg" alt="" class="img-fluid" />
-            <div class="media-body">
-                <h5 class="mt-0">@item.CommentUserName</h5>
-                <p>
-                    @item.CommentContent
-                </p>
+        <h4>Yorumlar</h4>
+        @foreach (var item in Model)
+        {
+            <div class="media">
+                <img src="~/CoreBlogTema/web/images/t1.jpg" alt="" class="img-fluid" />
+                <div class="media-body">
+                    <h5 class="mt-0">@item.CommentUserName</h5>
+                    <p>
+                        @item.CommentContent
+                    </p>
+                </div>
             </div>
-        </div>
+        }
+    }
+    else
+    {
+        <h4>Hiç Yorum Yapılmamış. İlk Yorumu Sen Yap</h4>
     }
 </div>
