32 - View Component İle Parametre Kullanımı

--- a/CoreBlog/Views/Shared/Components/CommentListByBlog/Default.cshtml
+++ b/CoreBlog/Views/Shared/Components/CommentListByBlog/Default.cshtml
@@ -19,6 +19,6 @@
     }
     else
     {
-        <h4>Hiç Yorum Yapılmamış. İlk Yorumu Sen Yap</h4>
+        <h4>Bu blog için henüz yorum yapılmadı. İlk yorumu siz yazın...</h4>
     }
 </div>
