--- a/CoreBlog/Views/Blog/BlogReadAll.cshtml
+++ b/CoreBlog/Views/Blog/BlogReadAll.cshtml
@@ -60,7 +60,7 @@
 
                     @*@await Component.InvokeAsync("CommentList")*@
 
-                    @await Component.InvokeAsync("CommentListByBlog")
+                    @await Component.InvokeAsync("CommentListByBlog", new { id = ViewBag.id })
 
                     @*@await Html.PartialAsync("~/Views/Comment/CommentListByBlog.cshtml")*@
 
@@ -81,32 +81,17 @@
                                 <input type="email" placeholder="Email" required="">
                                 <input type="submit" value="Subscribe">
                             </form>
+                        </div>
 
-                        </div>
+                        @await Component.InvokeAsync("CategoryList")
+
                         <div class="tech-btm">
-                            <h4>Categories</h4>
-                            <ul class="list-group single">
-                                <li class="list-group-item d-flex justify-content-between align-items-center">
-                                    Cras justo odio
-                                    <span class="badge badge-primary badge-pill">14</span>
-                                </li>
-                                <li class="list-group-item d-flex justify-content-between align-items-center">
-                                    Dapibus ac facilisis in
-                                    <span class="badge badge-primary badge-pill">2</span>
-                                </li>
-                                <li class="list-group-item d-flex justify-content-between align-items-center">
-                                    Morbi leo risus
-                                    <span class="badge badge-primary badge-pill">1</span>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="tech-btm">
-                            <h4>Top stories of the week</h4>
+                            <h4>Yazarın Diğer Yazıları</h4>
 
                             <div class="blog-grids row mb-3">
                                 <div class="col-md-5 blog-grid-left">
                                     <a href="single.html">
-                                        <img src="images/1.jpg" class="img-fluid" alt="">
+                                        <img src="~/CoreBlogTema/web/images/1.jpg" class="img-fluid" alt="">
                                     </a>
                                 </div>
                                 <div class="col-md-7 blog-grid-right">
@@ -125,7 +110,7 @@
                             <div class="blog-grids row mb-3">
                                 <div class="col-md-5 blog-grid-left">
                                     <a href="single.html">
-                                        <img src="images/6.jpg" class="img-fluid" alt="">
+                                        <img src="~/CoreBlogTema/web/images/6.jpg" class="img-fluid" alt="">
                                     </a>
                                 </div>
                                 <div class="col-md-7 blog-grid-right">
@@ -165,11 +150,11 @@
                             </div>
                         </div>
                         <div class="single-gd tech-btm">
-                            <h4>Recent Post</h4>
+                            <h4>Son Eklenen Post</h4>
                             <div class="blog-grids">
                                 <div class="blog-grid-left">
                                     <a href="single.html">
-                                        <img src="images/b1.jpg" class="img-fluid" alt="">
+                                        <img src="~/CoreBlogTema/web/images/b1.jpg" class="img-fluid" alt="">
                                     </a>
                                 </div>
                                 <div class="blog-grid-right">
