--- a/CoreBlog/Views/Register/Index.cshtml
+++ b/CoreBlog/Views/Register/Index.cshtml
@@ -4,12 +4,15 @@
     Layout = "~/Views/Shared/_UserLayout.cshtml";
 }
 
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script src="~/lib/jquery/dist/jquery.js"></script>
+
 <section class="main-content-w3layouts-agileits">
     <div class="container">
         <h3 class="tittle">Yazar Kayıt Sayfası</h3>
         <div class="inner-sec">
             <div class="login p-5 bg-light mx-auto mw-100">
-                <form action="#" method="post">
+                <form method="post">
                     <div class="form-row">
                         <div class="col-md-6 mb-3">
                             <label for="validationCustom01">Adınız Soyadınız</label>
@@ -17,7 +20,7 @@
                             <input type="text" class="form-control" id="validationDefault01" name="WriterName" placeholder="" required="">
                         </div>
                         <div class="col-md-6 mb-3">
-                            <label for="validationCustom02">>Mail Adresi</label>
+                            <label for="validationCustom02">Mail Adresi</label>
                             <input type="email" class="form-control" id="validationDefault02" name="WriterMail" placeholder="" required="">
                         </div>
                     </div>
@@ -34,16 +37,21 @@
                     <div class="form-row">
                         <div class="form-group col-md-6">
                             <label for="exampleInputPassword2 mb-2">Gorsel Dosya Yolu</label>
-                            <input type="password" class="form-control" name="WriterImage" id="password2" placeholder="" required="">
+                            <input type="text" class="form-control" name="WriterImage" id="password2" placeholder="" required="">
                         </div>
                     </div>
                     <button type="submit" class="btn btn-primary submit mb-4">Kayıt Ol</button>
                     <p>
-                        <a href="#">Tüm şartları okudum ve kabul ediyorum.</a>
+                        <a href="#" id="btn1">Tüm şartları okudum ve kabul ediyorum.</a>
                     </p>
                 </form>
-
             </div>
         </div>
     </div>
+
+    <script>
+        $('#btn1').click(function () {
+            swal("Site Kabul Şartları", "Sitemizde verdiğiniz mail adresi üzerinden bilgi ve haber e-postaları spam ölçüsüne varmadan gönderilmeye devam edilecektir. Eğer e-posta bülteninden çıkmak iterseniz mail ileti dizisini durdurabilirsiniz, şifre ve mail adresleriniz şifrelenmiş formatta herhangi bir kullanıcının görmeyeceği şekilde veri tabanlarımızda saklanmaktadır.");
+        });
+    </script>
 </section>
